# optimizers

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  commons.py  makefile  matrix_functions.py  matrix_functions_types.py  optimizer_modules.py  pyproject.toml  setup.py  utils.py
.github/workflows/: examples.yaml  format-ruff.yaml  format-usort.yaml  format.yaml  gpu-tests.yaml  lint-ruff.yaml  lint.yaml  pre-commit.yaml  tests.yaml  type-check-mypy.yaml  type-check.yaml
benchmarks/: README.md  preconditioner.py  preconditioner_benchmark.py  preconditioners.py
distributed_shampoo/: README.md  __init__.py  distributed_shampoo.py  fsdp_shampoo.py  matrix_functions.py  optimizer_modules.py  shampoo_checkpoint_utils.py  shampoo_dist_utils.py  shampoo_fsdp_utils.py  shampoo_types.py  shampoo_utils.py
distributed_shampoo/distributor/: README.md  _shampoo_fully_shard_lossless_distributor.py  _shampoo_hybrid_shard_lossless_distributor.py  shampoo_ddp_distributor.py  shampoo_distributor.py  shampoo_fsdp_distributor.py  shampoo_fsdp_utils.py  shampoo_fully_shard_distributor.py  shampoo_fully_shard_lossless_distributor.py  shampoo_hsdp_distributor.py  shampoo_hybrid_shard_distributor.py
distributed_shampoo/examples/: argument_parser.py  cifar10_example.py  convnet.py  ddp_cifar10_example.py  default_cifar10_example.py  fsdp_cifar10_example.py  fully_shard_cifar10_example.py  hsdp_cifar10_example.py  hybrid_shard_cifar10_example.py  loss_metrics.py  multi_gpu_cifar10_example.py  parallelism.py  resolvers.py  single_gpu_cifar10_example.py  trainer_utils.py  utils.py
distributed_shampoo/gpu_tests/: iterate_averaging_test.py  shampoo_eigenvalue_correction_test.py  shampoo_fused_adam_grafting_test.py  shampoo_grafting_test.py  shampoo_pt2_test.py  weight_decay_test.py
distributed_shampoo/preconditioner/: README.md  adagrad_preconditioner_list.py  matrix_functions.py  matrix_functions_types.py  shampoo_preconditioner_list.py
distributed_shampoo/tests/: distributed_shampoo_test.py  matrix_functions_test.py  optimizer_modules_test.py  shampoo_dist_utils_test.py  shampoo_fsdp_utils_test.py  shampoo_grafting_test.py  shampoo_model_utils_test.py  shampoo_test_utils.py  shampoo_types_test.py  shampoo_utils_test.py
distributed_shampoo/utils/: README.md  abstract_dataclass.py  commons.py  load_balancing_utils.py  optimizer_modules.py  shampoo_block_info.py  shampoo_checkpoint_utils.py  shampoo_ddp_distributor.py  shampoo_dist_utils.py  shampoo_distributor.py  shampoo_fsdp2_distributor.py  shampoo_fsdp_distributor.py  shampoo_fsdp_utils.py  shampoo_fully_shard_distributor.py  shampoo_hsdp_distributor.py  shampoo_hybrid_shard_distributor.py  shampoo_model_utils.py  shampoo_preconditioner_list.py  shampoo_quantization.py  shampoo_utils.py
gpa/: README.md  gpa_adamw.py  gpa_types.py
gpa/examples/: cifar10_example.py
gpa/gpu_tests/: gpa_adamw_numerics_test.py
shampoo/: README.md  matrix_functions.py  shampoo.py  shampoo_utils.py
tests/: commons_test.py  matrix_functions_test.py  matrix_functions_types_test.py  optimizer_modules_test.py
(+56 files in other folders)
